conf_file/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: front-end
  name: service-frontend
  namespace: pfe
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: front-end
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: back-end
  name: service-backend
  namespace: pfe
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: front-end
  type: NodePort
  
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: service-api
  namespace: pfe
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: api
  type: NodePort
