conf_file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress-controller
  namespace: pfe
  spec.ingressClassName: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - yourimaginaryfriend.local
    secretName: certificat-tls
  rules:
  - host: yourimaginaryfriend.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service-frontend
            port:
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service-backend
            port:
              number: 3000
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service-api
            port:
              number: 5000
      - pathType: Exact
        backend:
          service:
            name: el-github-listener
            port:
            number: 8080
