conf_file/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yourimaginaryfriend
  namespace: production
spec:
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end
        image: "tidix/public:frontend"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: front-end
  name: service-nodeport
  namespace: production
spec:
  ports:
  - name: 80-80
    nodePort: 30008
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: front-end
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: front-end
spec:
  tls:
  - hosts:
    - yourimaginaryfriend.local
    secretName: certificat-tls
  rules:
  - host: yourimaginaryfriend.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: service-nodeport
            port:
              number: 80
